# SAT_SOLVER

./: .gitignore  .gitmodules  README.md  dpll_solver.py  moms_branching_heuristics.py  pdf_clauses_and_results.txt  pyproject.toml  sat_problem.py  test_dpll_solver.py  twl_sat_problem.py
DATA/Clauses_Files/Clauses_Files_Results/PDFS_Results/: pdf8.results  pdf9.results
DATA/Clauses_Files/Clauses_Files_Results/TESTS_Results/: ple_test.results  twl_test.results  upd_test.results
DATA/Clauses_Files/PDFS/: pdf1.cnf
DATA/Clauses_Files/TESTS/: upd_test.cnf
DIMACS_Reader/: clause_reader.py
SATProblems/: sat_problem.py  twl_sat_problem.py
Solver/: dpll_solver.py
Testers/: test_SATLIB.py  test_dpll_solver.py  version_tester.py
src/sat_solver/Clause_Elimination_Methods/: clause_elimination_methods.py
src/sat_solver/DATA/CDCL_Clauses_Files/Clauses_Files_Results/: cdcl_graph.gresults  (+4 more)
src/sat_solver/DIMACS_Reader/: clause_reader.py  clauses_model.py
src/sat_solver/Heuristics/: literal_count_branching_heuristics.py  moms_branching_heuristics.py
src/sat_solver/Loggers/: cdcl_logger.py  graph_step_logger.py  step_logger.py
src/sat_solver/SATProblems/: sat_problem.py  true_twl_sat_problem.py  twl_sat_problem.py
src/sat_solver/Solver/: dpll_solver.py
src/sat_solver/Solvers/: cdcl_solver.py  dpll_solver.py
src/sat_solver/Testers/: cdcl_version_test.py  cdcl_version_tester.py  create_result_data.py  dpll_version_test.py  dpll_version_tester.py  test_SATLIB.py  test_dpll_solver.py  version_tester.py
src/sat_solver/Usage_Examples/: run_SATLIB.py  run_solver.py
(+84 files in other folders)
